--- a/muottitesti/templates/base.html
+++ b/muottitesti/templates/base.html
@@ -16,7 +16,13 @@
     <p> tämä on basetiedosto </p>
     {% endblock content %}
     </article>
+
+    <aside>
+    {% block discontent %}
+    <p> basediscontent </p>
+    {% endblock discontent %}
+    </aside>
+    
   </body>
 
 </html>
-
