e-mail field added

--- a/htmllomake/templates/index.html
+++ b/htmllomake/templates/index.html
@@ -6,6 +6,8 @@
     <input type=text name="name"> <br>
     password: <br>
     <input type=password name="password"> <br>
+    e-mail: <br>
+    <input type="email" name="email" required> <br>
     <input type=submit>
  </form>
 {% endblock content %}
